FIX (various)
Navbox grid breaks at medium size with long headings
Accordion group button underline offset added
Fixed link to App example

--- a/src/patterns/accordion/_accordion.scss
+++ b/src/patterns/accordion/_accordion.scss
@@ -48,6 +48,7 @@
     outline: none;
     padding: 0;
     text-decoration: underline;
+    text-underline-offset: 0.15em;
 
     &:hover {
         // Remove underline when hovered
